deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: redax
  labels:
    app.kubernetes.io/name: redax
